Carga foto noti/solicitud alumno/mostrar noticias

--- a/Administracion/gestionInformacionInstitucion.html
+++ b/Administracion/gestionInformacionInstitucion.html
@@ -186,7 +186,13 @@
 						</div>
 						<div class="divFormIns">
 							<label class="insImgClass" name="mensaje">Imagen Para La Noticia</label>
-							<input id="archivoIngNot" class="forImgClass" type="file" name="imagen">
+							<!--input id="archivoIngNot" class="forImgClass" type="file" name="imagen"-->
+								
+								<input id="archivos" class="forImgClass" type="file" name="archivos[]">
+						
+								<div class="msj"></div>
+								<div class="msj2"></div>
+								<div class="msj3"></div>
 						</div>
 						<div id="cent">
 							<button id="enviarIngresarNoticia" class="botonParaEnviar">Enviar</button>
