--- a/Alumno/IntranetAlumno.html
+++ b/Alumno/IntranetAlumno.html
@@ -15,7 +15,7 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/studen.js"></script>
-
+	<script src="../js/mostrarNoticias.js"></script>
 </head>
 <body class="p-admision">
 	<!-- HEADERRRRRRRRRRRR -->
@@ -148,7 +148,7 @@
 			</article>
 			<article id="noticias">
 				<header><h3>Noticias</h3></header>
-				<div class="contenidoNoticias">
+				<!--div class="contenidoNoticias">
 					<figure>
 						<img src="../images/post1.jpg">			
 					</figure>
@@ -180,7 +180,7 @@
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
+				</div-->
 			</article>
 		</div>
 		<!-- Informacion General -->
