--- a/Administracion/inscripcionReins.html
+++ b/Administracion/inscripcionReins.html
@@ -22,6 +22,7 @@
 	<script src="../js/jquery.validate.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/admins.js"></script>
+	<script src="../js/reinscripcion.js"></script>
 </head>
 <body class="p-admision">
 
