--- a/Administracion/intranetAdministracion.html
+++ b/Administracion/intranetAdministracion.html
@@ -51,7 +51,7 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Inscripción</a></li>
+						<li><a href="inscripcion.html">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
 						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
 						<li><a href="gestionUsuarios.html">Usuarios</a></li>
