Inscripcion , Reinscripcion, Crear Usuari -Listos

--- a/Administracion/gestionUsuarios.html
+++ b/Administracion/gestionUsuarios.html
@@ -147,9 +147,9 @@
 				<header><h3>Seleccionar Una Opción</h3></header>
 				<div id="contenidoNoticias" class="estiloGestionLibros">
 					<ul id="listaGestion">						
-						<li><a class="linkIngresar" id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Ingresar</a></li>
+						<li><a class="linkIngresar" id="iconomodificar" ></a><a class="textoAbajo" >Ingresar</a></li>
 						<li><a class="linkConsultar" id="iconoconsultar"></a><a class="textoAbajo">Consultar</a></li>
-						<li><a class="linkEliminar" id="iconomodificar"></a><a class="textoAbajo" href="#">Eliminar</a></li>
+						<li><a class="linkEliminar" id="iconomodificar"></a><a class="textoAbajo">Eliminar</a></li>
 					</ul>							
 				</div>				
 			</article>
@@ -236,8 +236,8 @@
 					<select id="tipoUsuarioIngresar1">
 						<option value="1">Administrador</option>
 						<option value="2">Docente</option>
-						<option value="3">Alumno</option>
-						<option value="4">Representante</option>
+						<!--option value="3">Alumno</option>
+						<option value="4">Representante</option-->
 					</select>
 					<button id="aceptarIngresar1" class="classBotonesECDoc">Aceptar</button>
 				</div>	
@@ -294,7 +294,10 @@
 								</select>
 							</td>
 						</tr>
-
+						<tr>
+							<td class="tamTDtam right espacioRi">Nacionalidad: </td>
+							<td class="left espacioLe"><input id="nacionalidadIngresar2" type="text"></td>
+						</tr>
 						<tr>
 							<td class="tamTDtam right espacioRi">Telefono: </td>
 							<td class="left espacioLe"><input id="telefonoIngresar2" type="text"></td>
@@ -396,7 +399,7 @@
 					<tbody>
 						<tr>
 							<td class="tamTDtam right espacioRi">Fecha Nacimiento: </td>
-							<td class="left espacioLe"><input id="fechaNacDocenteIngresar2"type="text"></td>
+							<td class="left espacioLe"><input type="date" id="fechaNacDocenteIngresar2"type="text"></td>
 						</tr>
 
 						<tr>
@@ -407,13 +410,15 @@
 				</table>
 
 				<button class="classBotonesECDoc" id="botonIngresar2">Ingresar</button>
-
+				<br>
+				<div id="msj"></div>
+				<br>
 				<div class="divAtrasInfoIns centrar">
 					<a class="linkAtrasParaBuscar1 linkAtrasInfoIns linkAtrasIngresar2"></a>
 					<a class="linkAtrasParaBuscar1 textoAbajoAtras linkAtrasIngresar2">Atras</a>
 				</div>	
 			</article>
-
+			
 			<article id="noticias" class="eliminar1 none">
 				<header><h3>Eliminar</h3></header>
 				<div class="primerDivGH centrar">
