--- a/Administracion/inscripcion.html
+++ b/Administracion/inscripcion.html
@@ -240,7 +240,7 @@
 								</label>
 								<label class="movit"> Actividad (Fuera del Plantel)
 									<select  class="form-control" name="actividad" id="actividad">
-										<option></option>
+										<option value="6">Sin Actividades</option>
 										<option value="1">Baile</option>
 										<option value="2">Deporte</option>
 										<option value="3">Gimnasia</option>
